<resources>
    <string name="app_name">My Movie DB</string>
    <string name="powered_by">Powered By The Movie Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_account">Login with Account</string>
    <string name="login_as_guest">Login as a Guest</string>
    <string name="movie_db_icon_content_description">Movie Db Icon</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_icon_description">Login Icon</string>
    <!-- String related to home fragment -->
    <string name="popular_movie">Popular Movie</string>
    <string name="user_score">User Score %1$d%%</string>
    <string name="movie_content_description">%1$s poster</string>
    <string name="now_playing_movies">Now Playing</string>
    <string name="popular_tv_show">Popular TV show</string>
    <string name="popular_movie_list_contentDesc">Popular Movie List</string>
    <string name="now_playing_movie_list_contentDesc">Now Playing Movie List</string>
    <string name="popular_tv_show_list_contentDesc">Popular TV Show List</string>
    <string name="on_air_tv_shows">On Air TV Shows</string>
    <string name="now_airing_tv_show_list_contentDesc">Now Airing TV Show List</string>
    <string name="try_again_message">Loading data is failed. Tap button to try again.</string>
    <string name="try_again_action">Try Again</string>
    <string name="load_more">Load More</string>
    <string name="search_hint">Enter a title here</string>
    <string name="Search_label">Search</string>
    <string name="movies_label">Movies</string>
    <string name="tv_shows_label">TV Shows</string>
    <string name="chooser_dialog_hint">Choose a Category to search</string>
    <string name="movie_not_found">Movie not found.</string>
    <string name="tv_show_not_found">TV Shows Data Not Found</string>
    <string name="home_label">Home</string>
    <string name="favourite_hint_detail">Favourite Button</string>
    <string name="add_to_watchlist_detail">Add To Watch List Button</string>
    <string name="over_view_detail">Overview: \n%1$s</string>
    <string name="rate_detail">Rate: %1$d%%</string>
    <string name="release_date_detail">Release Date: \n%1$s</string>
    <string name="first_air_date_detail">Firs Air Date: \n%1$s</string>
    <string name="recommendation_detail_label">Recommendation %1$s</string>
    <string name="similar_detail_label">Similar %1$s</string>
    <string name="logout_label">Logout</string>
    <string name="rate_title_label">Give your rate</string>
    <string name="submit_label">Submit</string>
    <string name="swipe_refresh_hint">%1$s. Swipe down to refresh</string>
    <string name="favourite_movies_label">Favourite Movies</string>
    <string name="favourite_tv_shows_label">Favourite TV Shows</string>
    <string name="favourite_shows_label">Favourite Shows</string>
    <string name="add_to_favourite_success">The show successfully removed from your favourite list</string>
    <string name="add_to_favourite_failed">Adding the show to favourite list is failed</string>
    <string name="remove_from_favourite_failed">Removing the show from favourite list is failed. </string>
    <string name="remove_from_favourite_success">The show successfully added to your favourite list</string>
    <string name="add_to_watchlist_success">The show successfully removed from your watch list</string>
    <string name="add_to_watchlist_failed">Adding the show to watch list is failed</string>
    <string name="remove_from_watchlist_failed">Removing the show from watch list is failed. </string>
    <string name="remove_from_watchlist_success">The show successfully added to your watch list</string>
    <string name="empty_favourite_movie">Yuu do not have favourite movie.</string>
    <string name="empty_favourite_tv_show">Yuu do not have favourite tv show.</string>
    <string name="watch_list_show_label">Watch List</string>
    <string name="movie_watch_list_menu">Movie Watch List</string>
    <string name="tv_watch_list_menu">TV Watch List</string>
    <string name="empty_watchlist_movie">You do not have watch list movie.</string>
    <string name="empty_watchlist_tv_show">You do not have watch list tv show.</string>
</resources>