<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/authenticationFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mymoviddb.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_categoryMovieListFragment"
            app:destination="@id/categoryMovieListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchDialogChooser"
            app:destination="@id/searchDialogChooser" />
    </fragment>
    <fragment
        android:id="@+id/authenticationFragment"
        android:name="com.example.mymoviddb.authentication.guest.AuthenticationFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_authentication">
        <action
            android:id="@+id/action_authenticationFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_authenticationFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mymoviddb.authentication.user.UserFragment"
        android:label="@string/action_login"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/categoryMovieListFragment"
        android:name="com.example.mymoviddb.category.CategoryShowListFragment"
        android:label="@string/popular_movie"
        tools:layout="@layout/fragment_category_show_list">
        <argument
            android:name="title"
            app:argType="integer" />
        <argument
            android:name="categoryId"
            app:argType="com.example.mymoviddb.category.ShowCategoryIndex" />
    </fragment>
    <dialog
        android:id="@+id/searchDialogChooser"
        android:name="com.example.mymoviddb.category.search.SearchDialogChooser"
        tools:layout="@layout/show_chooser_dialog">
        <action
            android:id="@+id/action_searchDialogChooser_to_searchFragment"
            app:destination="@id/searchFragment" />
    </dialog>
    <fragment
        android:id="@+id/favouriteMoviesFragment"
        android:name="com.example.mymoviddb.category.account.favourite.FavouriteMoviesFragment"
        android:label="@string/favourite_movies_label"
        tools:layout="@layout/fragment_favourite_movies" />
    <fragment
        android:id="@+id/favouriteTVShowsFragment"
        android:name="com.example.mymoviddb.category.account.favourite.FavouriteTVShowsFragment"
        android:label="@string/favourite_tv_shows_label"
        tools:layout="@layout/fragment_favourite_tv_shows" />
    <fragment
        android:id="@+id/watchListMovieFragment"
        android:name="com.example.mymoviddb.category.account.watchlist.WatchListMovieFragment"
        android:label="@string/movie_watch_list_menu"
        tools:layout="@layout/fragment_watch_list_movie" />
    <fragment
        android:id="@+id/watchListTVFragment"
        android:name="com.example.mymoviddb.category.account.watchlist.WatchListTVFragment"
        android:label="@string/tv_watch_list_menu"
        tools:layout="@layout/fragment_watch_list_tv" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.mymoviddb.category.search.SearchFragment"
        android:label="SearchResultFragment"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="searchID"
            app:argType="com.example.mymoviddb.category.ShowCategoryIndex" />
    </fragment>
</navigation>
