<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="authenticationVM"
            type="com.example.mymoviddb.authentication.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroound"
        tools:context=".authentication.AuthenticationActivity">

        <ImageView
            android:id="@+id/tmdb_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/movie_db_icon_content_description"
            android:src="@drawable/img_launcher"
            app:layout_constraintBottom_toTopOf="@id/login_with_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_with_account"
            style="@style/DefaultStyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_with_account"
            android:enabled="@{authenticationVM.isButtonEnabled}"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_as_guest"
            style="@style/DefaultStyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_as_guest"
            android:onClick="@{() -> authenticationVM.loginAsGuest()}"
            android:enabled="@{authenticationVM.isButtonEnabled()}"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/login_with_account" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:elevation="2dp"
            app:showLoadingState="@{authenticationVM.loginGuestResult}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>